2003-05-27  Andrew C. Stadt <acstadt@sympatico.ca>

	* include/winuser.h (LWA_COLORKEY, LWA_ALPHA): Add defines.

2003-05-25  Bill C. Riemers  <cygwin@docbill.net>

	* include/winuser.h (EnumDisplayDevicesW): Fix typo.

2003-05-23  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winuser.h (EnumDisplayDevices[AW]): Add prototypes.
	* include/wingdi.h (DISPLAY_DEVICE): UNICODE it.

2003-05-23  Andrew Dunbar <hippietrail@users.sourceforge.net>

	* include/wingdi.h (GCP_RESULTS[AW]) Correct type of
	lpGlyphs field to LPWSTR.

2003-05-21  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wincrypt.h (PLAINTEXTKEYBLOB, OPAQUEKEYBLOB,
	PUBLICKEYBLOBEX, SYMMETRICWRAPKEYBLOB) Add defines.
	(PP_*): Add defines.
	(CryptContextAddRef): Add prototype.
	Thanks to: Shura Zam  <debil_urod@users.sourceforge.net>

2003-05-18  Manu B  <manubee@users.sourceforge.net>
	
	* include/commctrl.h (TVSORTCB): Rename old TV_SORTCB structure.

2003-05-18  Bang Jun-Young <junyoung@netbsd.org>

	* include/winbase.h (CREATE_DEFAULT_ERROR_MODE,
	DEBUG_PROCESS, DEBUG_ONLY_THIS_PROCESS, CREATE_SUSPENDED,
	DETACHED_PROCESS, CREATE_NEW_CONSOLE, NORMAL_PRIORITY_CLASS,
	IDLE_PRIORITY_CLASS, HIGH_PRIORITY_CLASS, REALTIME_PRIORITY_CLASS,
	CREATE_NEW_PROCESS_GROUP, CREATE_UNICODE_ENVIRONMENT,
	CREATE_SEPARATE_WOW_VDM, CREATE_SHARED_WOW_VDM, CREATE_FORCEDOS,
	CREATE_NO_WINDOW): Convert to hexadecimal form for better
	readability.
	(BELOW_NORMAL_PRIORITY_CLASS, ABOVE_NORMAL_PRIORITY_CLASS,
	CREATE_BREAKAWAY_FROM_JOB, CREATE_WITH_USERPROFILE): Add.

2003-05-15  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/ddk/ndis.h (NDIS30_MINIPORT_CHARACTERISTICS_S):
	Unname anonymous unions if NONAMELESSUNION not defined.

2003-05-14  Bang Jun-Young  <junyoung@netbsd.org>

	* include/winbase.h (GMEM_VALID_FLAGS): Add.

2003-05-13  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/prsht.h (PROPSHEETHEADER[AW]: Mark
	anonymous unions as GCC extension.
